Fix overflowing result item styling, bump version to 0.4.12

--- a/resources/public/css/main.css
+++ b/resources/public/css/main.css
@@ -4808,17 +4808,24 @@ footer ul li {
             .result-list-container .result-list .result-item .result-item-data .result-type .seen-icon i {
               margin: 0; }
         .result-list-container .result-list .result-item .result-item-data .result-item-text {
+          *zoom: 1;
           display: block;
           margin-left: 50px;
           position: relative;
           background-color: inherit; }
+          .result-list-container .result-list .result-item .result-item-data .result-item-text:before, .result-list-container .result-list .result-item .result-item-data .result-item-text:after {
+            content: "";
+            display: table; }
+          .result-list-container .result-list .result-item .result-item-data .result-item-text:after {
+            clear: both; }
           .result-list-container .result-list .result-item .result-item-data .result-item-text .hover-popout {
             background-color: inherit;
             position: absolute;
             width: 100%;
+            height: 100%;
             padding-left: 5px; }
             .result-list-container .result-list .result-item .result-item-data .result-item-text .hover-popout:hover {
-              z-index: 5; }
+              height: auto; }
         .result-list-container .result-list .result-item .result-item-data .result-item-status {
           font-size: 0.6em; }
       .result-list-container .result-list .result-item:nth-child(even) .result-item-data {
